[gd_scene load_steps=14 format=2]

[ext_resource path="res://Resources/Main Menu/main_menu.gd" type="Script" id=1]
[ext_resource path="res://Assets/Main Menu/mm_music.ogg" type="AudioStream" id=2]
[ext_resource path="res://Assets/HUD/upheavtt.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/Main Menu/mm_torch.tres" type="Texture" id=5]
[ext_resource path="res://Resources/Others/upheavtt.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Assets/Others/light2_sprite.png" type="Texture" id=7]
[ext_resource path="res://Resources/Others/fade.tscn" type="PackedScene" id=8]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=3]
default_font = SubResource( 2 )
Button/colors/font_color = Color( 1, 1, 1, 1 )
Button/colors/font_color_disabled = Color( 0.607843, 0.607843, 0.607843, 0.639216 )
Button/colors/font_color_focus = Color( 1, 1, 1, 1 )
Button/colors/font_color_hover = Color( 0.980392, 0.435294, 0.329412, 1 )
Button/colors/font_color_pressed = Color( 1, 0.243137, 0.223529, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/focus = SubResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 105
font_data = ExtResource( 6 )

[sub_resource type="Theme" id=5]
default_font = SubResource( 4 )

[sub_resource type="Animation" id=6]
length = 5.0
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath(".:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 2.75, 4.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 1.4, 1.0, 1.4, 1.0 ]
}

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 3 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
next_level_path = "res://Resources/Levels/Level 1/level1.tscn"

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="Torch" type="TextureRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 280.0
margin_top = 20.0
margin_right = -910.0
margin_bottom = -610.0
rect_scale = Vector2( 8, 8 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 580.0
margin_top = 540.0
margin_right = -580.0
margin_bottom = -70.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="HBoxContainer"]
margin_right = 120.0
margin_bottom = 34.0
text = "PLAY"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Levels" type="Button" parent="HBoxContainer"]
margin_top = 38.0
margin_right = 120.0
margin_bottom = 72.0
disabled = true
text = "LEVELS"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="HBoxContainer"]
margin_top = 76.0
margin_right = 120.0
margin_bottom = 110.0
text = "QUIT"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 150.0
margin_top = 50.0
margin_right = -145.0
margin_bottom = -570.0
theme = SubResource( 5 )
text = "CLEBER'S DUNGEON"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LightControl" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 620.0
margin_top = 330.0
margin_right = -620.0
margin_bottom = -350.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Light2D" type="Light2D" parent="LightControl"]
position = Vector2( 20, 20 )
scale = Vector2( 1.2, 0.6 )
texture = ExtResource( 7 )
texture_scale = 1.1
color = Color( 1, 0.741176, 0.552941, 1 )
energy = 1.4

[node name="AnimationPlayer" type="AnimationPlayer" parent="LightControl/Light2D"]
autoplay = "Light"
anims/Light = SubResource( 6 )

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color( 0, 0, 0, 1 )

[node name="Fade" parent="." instance=ExtResource( 8 )]
fade_in_time = 1.0
fade_out_time = 1.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -15.0
autoplay = true

[connection signal="pressed" from="HBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="HBoxContainer/Levels" to="." method="_on_Levels_pressed"]
[connection signal="pressed" from="HBoxContainer/Quit" to="." method="_on_Quit_pressed"]
